# WinToast

./: .gitignore  CMakeLists.txt
cmake/: WinToastConfig.cmake.in
example/console-example/: main.cpp
example/qt-gui-example/: mainwindow.cpp
include/WinToast/: WinToast.hpp
src/: wintoastlib.cpp
